[project]
name = "llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "matplotlib>=3.10.8",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.3.0",
    "torch>=2.11.0",
    "transformers>=5.3.0",
    "umap-learn>=0.5.11",
]
